gke-manifests/aio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-helloworld-deployment
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: k8s-helloworld
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-helloworld
    spec:
      terminationGracePeriodSeconds: 90
      containers:
      - image: gcr.io/apollo-io-assignment/k8s-helloworld
        name: k8s-helloworld
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-helloworld-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: k8s-helloworld
  type: ClusterIP
