gke-manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-helloworld-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-helloworld
    networking.gke.io/managed-certificates: k8s-helloworld
spec:
  rules:
  - host: <project-id>.<addresses>.xip.io
    http:
      paths:
      - backend:
          serviceName: k8s-helloworld-service
          servicePort: 80
        path: /*
